# FO4Upscaling

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: build.yml  release.yml
cmake/: Common.cmake  FidelityFX-SDK.cmake
cmake/Streamline/: CMakeLists.txt
cmake/XeSS/: CMakeLists.txt
include/: PCH.h
package/F4SE/Plugins/: FrameGeneration.ini
package/F4SE/Plugins/FrameGeneration/: CopyColorToSharedBufferCS.hlsl  GenerateUIBufferCS.hlsl  UpscalePS.hlsl  UpscaleVS.hlsl
package/F4SE/Plugins/Upscaling/: BSImagespaceShaderSSLRRaytracing.hlsl  DilateMotionVectorCS.hlsl  OverrideDepthCS.hlsl  OverrideLinearDepthCS.hlsl  UpscaleColorCS.hlsl  UpscaleDepthCS.hlsl
package/MCM/Config/FrameGeneration/: config.json  settings.ini
package/MCM/Config/Upscaling/: config.json  settings.ini
plugins/FrameGeneration/: CMakeLists.txt
plugins/FrameGeneration/src/: Buffer.h  DX11Hooks.cpp  DX12SwapChain.cpp  DX12SwapChain.h  FidelityFX.cpp  FidelityFX.h  Streamline.cpp  Streamline.h  UICompositor.cpp  UICompositor.h  Upscaling.cpp  Upscaling.h  XSEPlugin.cpp  XeSSFG.cpp  XeSSFG.h
plugins/MotionVectorFixes/: CMakeLists.txt
plugins/MotionVectorFixes/src/: MotionVectorFixes.cpp  MotionVectorFixes.h  XSEPlugin.cpp
plugins/Upscaling/: CMakeLists.txt
plugins/Upscaling/src/: Buffer.h  DX11Hooks.cpp  DX11Hooks.h  FidelityFX.cpp  FidelityFX.h  Streamline.cpp  Streamline.h  Upscaling.cpp  Upscaling.h  Util.cpp  Util.h  XSEPlugin.cpp
scripts/: .env.example  compare-fg.sh  compare.py  deploy.sh  fetch-sdks.sh  inspect_process.py  monitor_fps.py  screenshot.py  sdk-manifest.sh  test.sh
